--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "glslify-loader": "^2.0.0",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "sass": "^1.49.9"
   }
 }
