--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^7.0.26",
     "framer-motion": "^6.2.9",
     "next": "12.1.0",
+    "plaiceholder": "^2.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "three": "^0.138.3"
