--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "plaiceholder": "^2.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.30.4",
     "three": "^0.138.3"
   },
   "devDependencies": {
